--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ img.margin {margin-left：5000px;//左}
       <a href="#" data-shutter-title="法学院"><img src="images/首页图片/shutter_1.jpg" alt="#"></a>
       <a href="#" data-shutter-title="中心图书馆"><img src="images/首页图片/shutter_2.jpg" alt="#"></a>
       <a href="#" data-shutter-title="行署楼"><img src="images/首页图片/shutter_3.jpg" alt="#"></a>
-       <a href="#" data-shutter-title="中图"><img src="images/首页图片/shutter_4.jpg" alt="#"></a>
+       <a href="#" data-shutter-title="计信院"><img src="images/首页图片/shutter_4.jpg" alt="#"></a>
     </div>
     <ul class="shutter-btn">
       <li class="prev"></li>
